--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@ transform:scale(1.05);
 <p>You are the most beautiful and lovely person in my whole life</p>
 <p>You seem like such a kind and calm person</p>
 <p>May we always stay together</p>
+<p>when i see you first time in school</p> 
+<p>I had already thought you are perfect for me</p>
 <p>I love you very, very much shrashtu</p>
 <p>You are different from everyone else</p>
 <p>You are only mine</p>
@@ -191,7 +193,7 @@ transform:scale(1.05);
 <p>I see my future with you </p>
 <p>Shrashtu, I just want to say to you please don’t ever break my trust and stay with me forever.</p>
 <p>I wish that you make my life happy and full of joy</p>
-<p>Did you like this surprise?
+<p>Did you like this surprise?</p>
 </div>
 </div>
 
@@ -223,5 +225,6 @@ setTimeout(()=>{heart.remove();},7000);
 
 </body>
 </html>
+
 
 
