--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ overflow:hidden;
 .content{
 max-width:900px;
 width:100%;
-animation:scrollText 150s cubic-bezier(0.4,0,0.2, 1) linear infinite;
+animation:scrollText 100s  linear infinite;
 padding:25px;
 border-radius:20px;
 background:rgba(255,255,255,0.08);
@@ -225,6 +225,7 @@ setTimeout(()=>{heart.remove();},7000);
 
 </body>
 </html>
+
 
 
 
